--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
   <link rel="stylesheet" href="css/app.css">
-  <title>OCamlScript</title>
+  <title>BuckleScript</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
@@ -37,7 +37,7 @@
   </script>
 
   <noscript>
-    <p> Introduction to OCamlScript</p>
+    <p> Introduction to BuckleScript</p>
   </noscript>
 </body>
 </html>
