--- a/jscomp/index.html
+++ b/jscomp/index.html
@@ -1,10 +1,17 @@
 <head>
+<base id="base_ref"></base>
 </head>
 
 <body>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script>
-<script src="./pre_load.js"></script>
-<!-- <script src="./require.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script> -->
+    <!-- <script src="./bb_require.js"></script> -->
+    <!-- <script src="./async.js"></script> -->
+    <script src="./require1k.js"></script>
+    <script>
+     R('./runtime/caml_int64', function(err,v){
+         window.int64 = v
+     })
+    </script>
 </body>
