--- a/jscomp/index.html
+++ b/jscomp/index.html
@@ -10,8 +10,8 @@
     <!-- <script src="./async.js"></script> -->
     <script src="./require1k.js"></script>
     <script>
-     R('./runtime/caml_int64', function(err,v){
-         window.int64 = v
+     R('./test/caml_format_test', function(err,v){
+         window.v = v
      })
     </script>
 </body>
