display warnings in the playground

--- a/js-demo/index.html
+++ b/js-demo/index.html
@@ -57,7 +57,11 @@ let () =
  hello_ocaml |> Array.to_list |> String.concat "," |> pprint  
         </textarea>
     </div>
+    <div style="width: 50%; float:right">
+        <textarea id="error" style="background-color: #e0e0e0">
 
+        </textarea>
+    </div>
     <div style="width: 50%; float:right">
         <textarea id="output" style="background-color: #e0e0e0">
 
