--- a/jscomp/index.html
+++ b/jscomp/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="./async.js"></script> -->
     <script src="./require1k.js"></script>
     <script>
-     R('./test/int64_test', function(err,v){
+     R('./test/printf_sim', function(err,v){
          window.v = v
      })
     </script>
