--- a/Runtime-representation.html
+++ b/Runtime-representation.html
@@ -70,6 +70,7 @@
 </ul>
 <p><strong>Contributions</strong></p>
 <ul>
+<li><a href="https://github.com/bloomberg/bucklescript">Github Link</a></li>
 <li><a href="Dev-mode-How-to.html">Dev mode How to</a></li>
 <li><a href="Help-move-runtime-functions-from-OCaml-to-Javascript.html">Help move runtime functions from OCaml to Javascript</a></li>
 </ul>
@@ -90,7 +91,17 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
+
                     <div class="col-lg-12">
+                      <a  class="btn btn-default"
+                      id="menu-toggle" 
+                         >Toggle Menu</a>
+
+                      <a  href="https://github.com/bloomberg/bucklescript/tree/master/docs/Runtime-representation.md" class="btn btn-default"
+                      style="position: absolute; top: 0; right: 0;
+                      border: 0;"
+                         >Edit on Github</a>
+
                       <p>Below is a description of how OCaml values are encoded in JavaScript, 
 the <strong>internal</strong> description means <strong>users should not rely on its actual
 encoding (and it is subject to change)</strong>. We recommend that you write setter/getter functions 
@@ -290,7 +301,8 @@ corresponding js encoding will be instrumented with more information using <code
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="js/start.js"></script>
+
 
 </body>
 
