--- a/Differences-from-js_of_ocaml.html
+++ b/Differences-from-js_of_ocaml.html
@@ -70,6 +70,7 @@
 </ul>
 <p><strong>Contributions</strong></p>
 <ul>
+<li><a href="https://github.com/bloomberg/bucklescript">Github Link</a></li>
 <li><a href="Dev-mode-How-to.html">Dev mode How to</a></li>
 <li><a href="Help-move-runtime-functions-from-OCaml-to-Javascript.html">Help move runtime functions from OCaml to Javascript</a></li>
 </ul>
@@ -90,7 +91,17 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
+
                     <div class="col-lg-12">
+                      <a  class="btn btn-default"
+                      id="menu-toggle" 
+                         >Toggle Menu</a>
+
+                      <a  href="https://github.com/bloomberg/bucklescript/tree/master/docs/Differences-from-js_of_ocaml.md" class="btn btn-default"
+                      style="position: absolute; top: 0; right: 0;
+                      border: 0;"
+                         >Edit on Github</a>
+
                       <p><a href="https://github.com/ocsigen/js_of_ocaml">js_of_ocaml</a> is a popular compiler which compiles OCaml&#39;s bytecode into JavaScript. It is the inspiration for this project, and has already been under development for several years and is ready for production. In comparison, BuckleScript, while moving fast, is still a very young project. BuckleScript&#39;s motivation, like <code>js_of_ocaml</code>, is to unify the ubiquity of the JavaScript platform and the truly sophisticated type system of OCaml, however, there are some areas where we view things differently from <code>js_of_ocaml</code>. We describe below, some of these differences, and also refer readers to some of the original informal <a href="https://github.com/ocsigen/js_of_ocaml/issues/338">discussions</a>.</p>
 <h2 id="debuggable-output">Debuggable Output</h2>
 <p>One of the main BuckleScript goal is to generate debuggable JavaScript code. From the start we believed developers using BuckleScript for JavaScript development will look at the generated code an order of magnitude more than an OCaml developer will look at the assembly one. Part of our intent is to make it easier for a JavaScript developer to transition to the OCaml language. Furthermore looking at existing transpilers for JavaScript:  <a href="http://coffeescript.org/">coffescript</a>, <a href="https://babeljs.io/">babel</a> and <a href="https://github.com/Microsoft/TypeScript">typescript</a>, the most widely adopted ones are the one that favors code readability.
@@ -139,7 +150,8 @@ BuckleScript does not provide a whole program compilation mode out of the box; i
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="js/start.js"></script>
+
 
 </body>
 
