--- a/Semantic-differences-from-other-backends.html
+++ b/Semantic-differences-from-other-backends.html
@@ -70,6 +70,7 @@
 </ul>
 <p><strong>Contributions</strong></p>
 <ul>
+<li><a href="https://github.com/bloomberg/bucklescript">Github Link</a></li>
 <li><a href="Dev-mode-How-to.html">Dev mode How to</a></li>
 <li><a href="Help-move-runtime-functions-from-OCaml-to-Javascript.html">Help move runtime functions from OCaml to Javascript</a></li>
 </ul>
@@ -90,7 +91,17 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
+
                     <div class="col-lg-12">
+                      <a  class="btn btn-default"
+                      id="menu-toggle" 
+                         >Toggle Menu</a>
+
+                      <a  href="https://github.com/bloomberg/bucklescript/tree/master/docs/Semantic-differences-from-other-backends.md" class="btn btn-default"
+                      style="position: absolute; top: 0; right: 0;
+                      border: 0;"
+                         >Edit on Github</a>
+
                       <p>This section describe the semantic difference between BuckleScript generated code and other backend. This is particularly important when porting an existing application to JavaScript.</p>
 <h1 id="custom-data-type">Custom data type</h1>
 <p>   In OCaml, the C FFI allows user to  define a custom data type and customize <code>caml_compare</code>, <code>caml_hash</code> behavior, etc.   This is not available in our backend (since we have no C FFI)</p>
@@ -143,7 +154,8 @@ Command line argument are always empty.</p>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="js/start.js"></script>
+
 
 </body>
 
