--- a/Unsupported-IO-primitives.html
+++ b/Unsupported-IO-primitives.html
@@ -44,6 +44,7 @@
 <ul>
 <li><a href="Installation.html">Installation</a></li>
 <li><a href="Create-a-simple-example-with-NPM.html">Create a simple example with NPM</a></li>
+<li><a href="NPM-Support.html">NPM Support</a></li>
 </ul>
 <p><strong>BuckleScript Basics</strong></p>
 <ul>
