--- a/NPM-Support.html
+++ b/NPM-Support.html
@@ -132,7 +132,7 @@ straightforward</p>
 </code></pre><h2 id="conclusion">Conclusion</h2>
 <p>Your command line would be like this</p>
 <pre><code>bsc -js-npm-package-include ocaml-library1 -js-npm-package-include
-ocaml-library2 -js-npm-output-path -c $npm_package_name:lib/js/ -c a.ml
+ocaml-library2 -js-npm-output-path $npm_package_name:lib/js/ -c a.ml
 </code></pre>
                     </div>
                 </div>
