--- a/Installation.html
+++ b/Installation.html
@@ -110,7 +110,7 @@
 <p>When working with OCaml we recommend using <a href="https://opam.ocaml.org">opam</a> package manager, available <a href="https://opam.ocaml.org/doc/Install.html">here</a>. You will benefit from the existing OCaml ecosystem. </p>
 <p>Once you have <code>opam</code> installed, ask <code>opam</code> to switch to using our version of the compiler:</p>
 <pre><code class="lang-sh">opam update
-opam switch ocaml-4.02.3+buckle-1
+opam switch 4.02.3+buckle-1
 eval `opam config env`
 </code></pre>
 <blockquote>
