--- a/reason-demo/index.html
+++ b/reason-demo/index.html
@@ -39,7 +39,7 @@ let rec fib =
 let sum n => {
   let v = ref 0;
   for i in 0 to n {
-    v := !v + i
+    v.contents = v.contents + i
   };
   !v
 };
