--- a/slides/Buckle_meetup.html
+++ b/slides/Buckle_meetup.html
@@ -34,12 +34,12 @@
         /*}*/
     </style>
     <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/1.10.9/css/jquery.dataTables.min.css">
+          href="//cdn.datatables.net/1.10.9/css/jquery.dataTables.min.css">
 </head>
 <body>
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
-<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
+<script src="//gnab.github.io/remark/downloads/remark-latest.min.js">
 </script>
 <script>
     var slideshow = remark.create({
