add remark.js to make http(s) happy

--- a/slides/Buckle_meetup.html
+++ b/slides/Buckle_meetup.html
@@ -39,7 +39,7 @@
 <body>
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
-<script src="//gnab.github.io/remark/downloads/remark-latest.min.js">
+<script src="./remark.js">
 </script>
 <script>
     var slideshow = remark.create({
