--- a/Compiler-options.html
+++ b/Compiler-options.html
@@ -53,7 +53,7 @@
         data-chapter-title="Compiler options"
         data-filepath="Compiler-options.md"
         data-basepath="."
-        data-revision="Tue Jul 05 2016 17:01:33 GMT-0400 (EDT)"
+        data-revision="Thu Jul 07 2016 15:25:41 GMT-0400 (EDT)"
         data-innerlanguage="">
     
 
@@ -535,6 +535,13 @@
                     <section class="normal" id="section-">
                     
                         <p>BuckleScript inherits the command line arguments of the <a href="http://caml.inria.fr/pub/docs/manual-ocaml/comp.html" target="_blank">OCaml compiler</a>. It also adds several flags:</p>
+<ul>
+<li>-bs-files</li>
+</ul>
+<p>so that you can do</p>
+<pre><code class="lang-bash">bsc -bs-files *.ml *.mli
+</code></pre>
+<p>The compiler will sort the order of input files before starting compilation</p>
 <ul>
 <li>-bs-module</li>
 </ul>
