--- a/js-demo/index.html
+++ b/js-demo/index.html
@@ -7,7 +7,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/mode/javascript/javascript.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/addon/edit/matchbrackets.min.js"></script>
     <link rel="stylesheet" type="text/css" href="theme.css">
-
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" 
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+   crossorigin="anonymous"></script>
     <title>OCaml to Javascript transplier playground</title>
 </head>
 
@@ -48,15 +50,15 @@ type 'a list =
 
 let rec map f = function
   | Nil -> Nil
-  | Cons (x,xs) ->  Cons (f x, map f xs)
+  | Cons (x,xs) ->  Cons (f x [@bs], map f xs)
 
 (** Test curry and uncurry calling convention *)
 let test_curry x  y =  x + y
 let f = test_curry 32
 
 let () =
- let hello_ocaml = [|"h";"e";"l";"l";"o";"o";"c";"a";"m";"l"|] in
- hello_ocaml |> Array.to_list |> String.concat "," |> pprint  
+ let hello_ocaml = [|"h";"e";"y";"o";"c";"a";"m";"l"|] in
+ hello_ocaml |> Array.to_list |> String.concat "," |> pprint              
         </textarea>
     </div>
     <div style="width: 50%; float:right">
@@ -85,12 +87,11 @@ let () =
 
     <div style="width: 50%;float:right"; >
         <textarea id="jscode#1" style="background-color: #008803">
-// GENERATED CODE BY BUCKLESCRIPT VERSION 0.3 , PLEASE EDIT WITH CARE
+// GENERATED CODE BY BUCKLESCRIPT VERSION 0.8.7 , PLEASE EDIT WITH CARE
 'use strict';
 
-var Curry    = require("./runtime/curry");
-var $$Array  = require("./stdlib/array");
-var $$String = require("./stdlib/string");
+var $$Array  = require("stdlib/array");
+var $$String = require("stdlib/string");
 
 function debug(x) {
   console.log("" + x);
@@ -140,7 +141,7 @@ function tail_sum(n) {
 function map(f, param) {
   if (param) {
     return /* Cons */[
-            Curry._1(f, param[0]),
+            f(param[0]),
             map(f, param[1])
           ];
   }
@@ -160,9 +161,7 @@ function f(param) {
 var hello_ocaml = /* array */[
   "h",
   "e",
-  "l",
-  "l",
-  "o",
+  "y",
   "o",
   "c",
   "a",
@@ -194,4 +193,5 @@ exports.f          = f;
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script>
 <script src="./pre_load.js"></script>
 <!-- <script src="./require.js"></script> -->
+<script src="./init.js"></script>
 </body>
