Add sharing functionality. Signed-Off-By: Abhir Mathur <abhirmathur@gmail.com>

--- a/js-demo/index.html
+++ b/js-demo/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/mode/javascript/javascript.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/addon/edit/matchbrackets.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/addon/edit/closebrackets.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js"></script>
     <link rel="stylesheet" type="text/css" href="theme.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" 
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -35,6 +36,7 @@
             <li><a href="#" id="ex2">Event Handler</a></li>
           </ul>
         </li>
+        <li><button class="btn navbar-btn navbar-button" data-loading-text="Getting link..."type="button" id="share">Share</button></li>
       </ul>
 
         <div class="checkbox navbar-btn navbar-right">
@@ -52,6 +54,32 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+<div id="shareModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title">Share</h4>
+      </div>
+      <div class="modal-body">
+        <div class = "row">
+          <div class = "col-sm-10" id="shareModalBody">
+          </div>
+          <div class="col-sm-2">
+           <button class="btn" id="copyButton" data-clipboard-target="#shareModalBody">
+            <span class="glyphicon glyphicon-copy"  id="copyGlyph" aria-hidden="true"></span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
 
 <div style="height: 10000px">
 
