--- a/js-demo/index.html
+++ b/js-demo/index.html
@@ -92,43 +92,7 @@
 
     <div class = "right-border" style="width: 50%;float:left">
         <textarea id="ocamlcode#1">
-external to_str : 'a -> string = "js_anything_to_string"
-external to_json_string : 'a -> string = "js_json_stringify"
-let debug x = print_endline (to_str x )
-let pprint x = print_endline (to_json_string x)
-let rec fib = function
-  | 1 | 2 -> 1
-  | n -> fib (n - 1 )  + fib (n - 2)
-(** Imperative style *)
-let sum n =
-    let v  = ref 0 in
-    for i = 0 to n do
-       v := !v + i
-    done;
-    !v
-let tail_sum n =
-  let rec aux acc i =
-    if i <= n then
-      aux (acc + i) (i + 1)
-    else acc
-  in aux 0 0
-
-(** List map *)
-type 'a list =
-  | Nil
-  | Cons of 'a * 'a list
-
-let rec map f = function
-  | Nil -> Nil
-  | Cons (x,xs) ->  Cons (f x [@bs], map f xs)
-
-(** Test curry and uncurry calling convention *)
-let test_curry x  y =  x + y
-let f = test_curry 32
-
-let () =
- let hello_ocaml = [|"h";"e";"y";"o";"c";"a";"m";"l"|] in
- hello_ocaml |> Array.to_list |> String.concat "," |> pprint              
+Js.log "Hello BuckleScript!"             
         </textarea>
     </div>
     <div style="width: 50%; float:right">
@@ -144,101 +108,12 @@ let () =
 
     <div style="width: 50%;float:right"; >
         <textarea id="jscode#1" style="background-color: #008803">
-// GENERATED CODE BY BUCKLESCRIPT VERSION 0.8.7 , PLEASE EDIT WITH CARE
 'use strict';
 
-var $$Array  = require("stdlib/array");
-var $$String = require("stdlib/string");
 
-function debug(x) {
-  console.log("" + x);
-  return /* () */0;
-}
+console.log("Hello BuckleScript!");
 
-function pprint(x) {
-  console.log(JSON.stringify(x));
-  return /* () */0;
-}
-
-function fib(n) {
-  if (n === 2 || n === 1) {
-    return 1;
-  }
-  else {
-    return fib(n - 1 | 0) + fib(n - 2 | 0) | 0;
-  }
-}
-
-function sum(n) {
-  var v = 0;
-  for(var i = 0; i <= n; ++i){
-    v = v + i | 0;
-  }
-  return v;
-}
-
-function tail_sum(n) {
-  var _acc = 0;
-  var _i = 0;
-  while(true) {
-    var i = _i;
-    var acc = _acc;
-    if (i <= n) {
-      _i = i + 1 | 0;
-      _acc = acc + i | 0;
-      continue ;
-      
-    }
-    else {
-      return acc;
-    }
-  };
-}
-
-function map(f, param) {
-  if (param) {
-    return /* Cons */[
-            f(param[0]),
-            map(f, param[1])
-          ];
-  }
-  else {
-    return /* Nil */0;
-  }
-}
-
-function test_curry(x, y) {
-  return x + y | 0;
-}
-
-function f(param) {
-  return 32 + param | 0;
-}
-
-var hello_ocaml = /* array */[
-  "h",
-  "e",
-  "y",
-  "o",
-  "c",
-  "a",
-  "m",
-  "l"
-];
-
-var x = $$String.concat(",", $$Array.to_list(hello_ocaml));
-
-console.log(JSON.stringify(x));
-
-exports.debug      = debug;
-exports.pprint     = pprint;
-exports.fib        = fib;
-exports.sum        = sum;
-exports.tail_sum   = tail_sum;
-exports.map        = map;
-exports.test_curry = test_curry;
-exports.f          = f;
-/* x Not a pure module */
+/*  Not a pure module */
 </textarea>
     </div>
 </div>
